Continue multiplayer implementation